css/styles.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    border: 0;
}

html,body
{
    width: 100%;
    height: 100%;
    margin: 0 !important;
    padding: 0 !important;
    overflow-x: hidden;
}

body {
    background-color: #fafaf6; /* #fafaf6 */
    color: black;
    scroll-behavior: smooth;
}

.text-right{}

.name{}

.proj-row{
  padding-bottom: 20px;
}

.link{
}

header {
    height: 100vh;
    margin-bottom: 10px;
    background: url("../img/splashscreen.jpg") no-repeat center center;
    background-size: cover;
    display: fixed;
    flex-direction: column;
}

.header-container{
  padding-right: 110px;
  padding-left: 220px;
  color: #40E0D0;
  z-index: 3;
}


.header-marker{
  text-align: center;
  justify-content: center;
  color: #40E0D0;
}

.typing-text{
  color: #40E0D0;
  align-items: center;
  text-align: center;
  justify-content: center;
}

.typewriter h1{
  overflow: hidden;
    border-right: .15em solid black;
    white-space: nowrap;
    margin: 0 auto;
    letter-spacing: 2px;
    animation: typing 1.3s steps(10, end), blink-caret .75s steps(50, end) infinite;
}

.typewriter{
  display: inline-flex;
}

/* The typing effect */
@-webkit-keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* The typewriter cursor effect */
@-webkit-keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: black; }
}

hr {
	height: 30px;
}

.school_proj{
  /* padding: 130px; */
}

.arrow{
  text-align: center;
}
.bio{
  /* font-size: 15px; */
  text-align: center;
}

.bio-section{
  height: 100vh;
  width: 100vw;
  word-wrap: break-word;
}

.logo {
	height: 150px;
	width: 150px;
}

.webninja {
    width: 100%;
    max-height: 800px;
}

.feat_thumbnail {
    display: block;
    min-width: 100%;
    max-width: 100%;
    height: 200px;
    /*object-fit: scale-down;*/
    border-radius: 5px;
}

.featuredprojects{
  background-image: url("../img/coding.jpg");
  height: 100vh;
  width: 100vw;
  color: #40E0D0;

}

/*     Carousel Styling     */
.container-carousel {
  margin: 0 auto;
  padding: 70px 0;
  width: 350px;
  height: 300px;
  position: relative;
  perspective: 1000px;
  font: 15px/20px Arial, sans-serif;

}

.carousel3d {
  height: 100%;
  width: 100%;
  position: absolute;
  transform-style: preserve-3d;
  transition: transform 1s;
}

.item {
  display: block;
  position: absolute;
  background: #000;
  width: 350px;
  max-height: 300px !important;
  line-height: 300px;
  font-size: 5em;
  text-align: center;
  color: #FFF;
  opacity: 0.95;
  border-radius: 10px;
}

.a {
  transform: rotateY(0deg) translateZ(350px);
  background: #ed1c24;
}
.b {
  transform: rotateY(60deg) translateZ(350px);
  background: #0072bc;
  font-size: 5;

}
.b-title {
  padding-bottom: 10px;
  font-size: 5;
}
.c {
  transform: rotateY(120deg) translateZ(350px);
  background: #39b54a;
}
.d {
  transform: rotateY(180deg) translateZ(350px);
  background: #f26522;
}
.e {
  transform: rotateY(240deg) translateZ(350px);
  background: #630460;
}

.f {
  transform: rotateY(300deg) translateZ(350px);
  background: #FF1493;
}


.next, .prev {
  color: #444;
  position: absolute;
  top: 100px;
  padding: 1em 2em;
  cursor: pointer;
  background: #CCC;
  border-radius: 5px;
  border-top: 1px solid #FFF;
  box-shadow: 0 5px 0 #999;
  transition: box-shadow 0.1s, top 0.1s;
}
.next:hover, .prev:hover { color: #000; }
.next:active, .prev:active {
  top: 104px;
  box-shadow: 0 1px 0 #999;
}
.next { right: 5em; }
.prev { left: 5em; }



.contact{
  text-align: center;
  padding-top: 300px;
  height: 100vh;
  width: 100vw;
  /* background-color: #40E0D0; */
  background-color: #fafaf6; /* #fafaf6 */

  overflow: hidden;
}



footer {
    margin-right: 10px;
    margin-left: 10px;
    text-align: center;
}

.bio-contact{
  height: 100vh;
  margin-bottom: 10px;
  width: auto;
  display: flex;
  flex-direction: column;
}

.videosplash{
  height: 100%;
  display: flex;
  align-items: center;
  /* margin: 0 !important; */
  overflow-y: hidden;
  position: relative;
}

.video_overlay{
  height: 100vh;
  width: 100vw;
  position: absolute;
  top: 0;
  left: 0;
  background: #225470;
  z-index: 2;
  opacity: .85;
  /* margin: 0 !important; */
  overflow-x: hidden;
}

.video_text{
  top: 50%;
  left: 40%;
}

video{
  position: absolute;
  top: 50%;
  left: 50%;
  bottom: 10%;
  background: rgba(0, 0, 0, 0);
  transform: translate(-50%, -50%);
  /* min-width: 100%;
  min-height: 100%; */
  width: 100%;
  z-index: 1;

}


/*     Card Flip Styling    */
/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.flip-card {
  background-color: transparent;
  width: 300px;
  height: 300px;
  /* border: 1px solid #f1f1f1; */
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
  border-radius: 25px;
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
  border-radius: 25px;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

/* Position the front and back side */
.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  border-radius: 25px;
}

/* Style the front side (fallback if image is missing) */
.flip-card-front {
  background-color: #bbb;
  color: black;
}

.card_preview{
  width: 300px;
  height: 300px;
  border-radius: 25px;
}

/* Style the back side */
.flip-card-back {
  background-color: dodgerblue;
  color: white;
  transform: rotateY(180deg);
}

.unstyled-button{
  background: none transparent;
  border: none;
}

/*Neon*/
.contact {
  text-align: center;
  font-size: 7em;
  /* margin: 20px 0 20px 0; */
  color: black;
}

.icon{
  padding-right: 30px;
  padding-bottom: 30px;
}

a {
  text-decoration: none;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}

p a {
  color: #fff;
  font-family: Monoton;
  -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
  animation: neon1 1.5s ease-in-out infinite alternate;
}

.contact-button {
  color: #337ab7;
  font-family: Monoton;
  /* -webkit-animation: neon1 1.5s ease-in-out infinite alternate;
  -moz-animation: neon1 1.5s ease-in-out infinite alternate;
  animation: neon1 1.5s ease-in-out infinite alternate; */
}

@-webkit-keyframes neon1 {
  from {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
  }
  to {
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #FF1177, 0 0 35px #FF1177, 0 0 40px #FF1177, 0 0 50px #FF1177, 0 0 75px #FF1177;
  }
}

.effeckt-modal-wrap {
-webkit-transform: translate(-50%, -50%);
-ms-transform: translate(-50%, -50%);
-o-transform: translate(-50%, -50%);
transform: translate(-50%, -50%);
position: fixed;
top: 50%;
left: 50%;
width: 50%;
min-width: 320px;
max-width: 630px;
z-index: 2000;
display: none;
}
.effeckt-modal {
visibility: hidden;
-webkit-backface-visibility: hidden;
-ms-backface-visibility: hidden;
-o-backface-visibility: hidden;
backface-visibility: hidden;
background: white;
}


.effeckt-overlay.effeckt-show {
opacity: 1;
visibility: visible;
}
.effeckt-overlay {
position: fixed;
width: 100%;
height: 100%;
visibility: hidden;
top: 0;
left: 0;
opacity: 0;
-webkit-transition: 500ms;
-o-transition: 500ms;
transition: 500ms;
z-index: 1000;
background: rgba(0, 0, 0, 0.5);
}
.effeckt-modal h3 {
padding: 1rem;
color: white;
background: #444;
}
.effeckt-modal-content {
padding: 1rem;
}
/* Effect 8: 3D flip horizontal */
.md-effect-8 {
-webkit-perspective: 1300px;
-ms-perspective: 1300px;
-o-perspective: 1300px;
perspective: 1300px;
-webkit-transform-style: preserve-3d;
-ms-transform-style: preserve-3d;
-o-transform-style: preserve-3d;
transform-style: preserve-3d;
}
.md-effect-8 .effeckt-modal {
-webkit-transform: rotateY(-70deg);
-ms-transform: rotateY(-70deg);
-o-transform: rotateY(-70deg);
transform: rotateX(-70deg);
-webkit-transition: all 500ms;
-o-transition: all 500ms;
transition: all 500ms;
opacity: 0;
}
.effeckt-show.md-effect-8 .effeckt-modal {
-webkit-transform: rotateY(0deg);
-ms-transform: rotateY(0deg);
-o-transform: rotateY(0deg);
transform: rotateY(0deg);
opacity: 1;
}

#feat_proj-mobile {display: none;}


@media screen and (max-width: 768px) {

  #feat_proj-desktop {display: none;}
  #feat_proj-mobile {display: block;}

}

